# TesAPI

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: design-prompt.md  phase-1-plan.md  phase-2-plan.md  phase-2-prd.md  phase-3-plan.md  phase-3-prd.md
scripts/: check-version.mjs  seed-phase-3.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  db_tests.rs  git_branches.rs  git_commands.rs  git_commit.rs  git_conflict.rs  git_history.rs  git_status.rs  git_sync.rs  git_sync_tests.rs  git_transport.rs  git_ui_commands.rs  git_worktree.rs  http.rs  lib.rs  main.rs  registry_commands.rs  storage.rs  storage_collections.rs  windows.rs  workspace.rs  workspace_io.rs  workspace_watch.rs
src/components/: CloseTabDialog.tsx  CodeEditor.tsx  CurlImportModal.tsx  SaveRequestModal.tsx  Toast.tsx  VariableInput.tsx  VariablePopover.tsx  VariablesPanel.tsx
src/components/editor/: varHighlight.ts
src/components/git/: git.css
src/hooks/: useAppUpdater.ts  useGitConflicts.ts  useWorkspaceCollaboration.ts  useWorkspaceController.ts  useWorkspaceWatcher.ts
src/lib/: collections.test.ts  collections.ts  environments.test.ts  environments.ts  http.ts  id.ts  methods.ts  params.test.ts  params.ts  variables.test.ts  variables.ts
src/store/: collectionStore.ts  environmentStore.ts  gitStore.ts  requestStore.test.ts  requestStore.ts  variableStatus.ts
src/types/: index.ts
(+80 files in other folders)
