[package]
name = "tesapi"
version = "0.1.0"
description = "TesAPI desktop API client"
authors = ["you"]
edition = "2021"
default-run = "tesapi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tesapi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["io-std", "macros", "net", "rt-multi-thread", "sync", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
git2 = { version = "0.20", features = ["vendored-openssl"] }
notify = "8"
chrono = "0.4"
getrandom = "0.3"
interprocess = { version = "2.4", features = ["tokio"] }
libc = "0.2"
rmcp = { version = "2.2", features = ["transport-io"] }
sha2 = "0.10"
toml_edit = "0.23"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
